--- a/Landing Page/indix.html
+++ b/Landing Page/indix.html
@@ -45,35 +45,166 @@
                     <button style="background-color: white; color: #0B363C;">Try Demo</button>
                 </div>
             </div>
-            <div>
-                <div><img src="assets/IMG/header.avif" alt=""></div>
-                <div>
-                    <h2>100+</h2>
+            <div class="boxs">
+                <div><img style="border-radius: 5px;" src="assets/IMG/header.jpg" alt=""></div>
+                <div class="text_box" style="background-color: #0B363C; color: white; height: 80%;">
+                    <h4>100+</h4>
                     <p>Our Esteemed Clients and Partners</p>
                 </div>
-                <div>
+                <div class="text_box" style="background-color: white; color: black; height: 50%;">
                     <p>Total projects</p>
-                    <h2>1951+</h2>
-                    <p>Increase of <span>126</span> this month</p>
+                    <h4>1951+</h4>
+                    <p style="font-size: 8px;">Increase of <span style="color: green;">126</span> this month</p>
                 </div>
-                <div>
-                    <h2>6+</h2>
+                <div class="text_box" style="background-color: #95f093; color: black; height: 80%;">
+                    <h4>6+</h4>
                     <p>Years of Dedicated Service</p>
                 </div>
-                <div>
+                <div class="text_box" style="background-color: #041e22; color: white; height: 100%;">
                     <p>Archieve Optimal Efficiency and Boost Productivit</p>
                 </div>
             </div>
         </div>
     </header>
     <main>
-        <div class="section1"></div>
-        <div class="section2"></div>
-        <div class="section3"></div>
-        <div class="section4"></div>
-        <div class="section5"></div>
+        <section class="section1">
+            <div>
+                <h2>Efficient and Integrated <br>Manufacturing Services</h2>
+                <p>Simplify operations with our efficient, quality-focused services.</p>
+            </div>
+            <div class="boxes">
+                <div class="boxs">
+                    <div>
+                        <i class="fa-solid fa-asterisk"></i>
+                        <i class="fa-solid fa-location-arrow"></i>
+                    </div>
+                    <div>
+                        <h4>Production and Assembly</h4>
+                        <p>Detalis on production processes, assembly capacity, and product type.</p>
+                    </div>
+                </div>
+                <div class="boxs">
+                    <div>
+                        <i class="fa-solid fa-layer-group"></i>
+                        <i class="fa-solid fa-location-arrow"></i>
+                    </div>
+                    <div>
+                        <h4>Custom Manufactuing</h4>
+                        <p>Custom product creation with design and customization options.</p>
+                    </div>
+                </div>
+                <div class="boxs">
+                    <div>
+                        <i class="fa-solid fa-screwdriver-wrench"></i>
+                        <i class="fa-solid fa-location-arrow"></i>
+                    </div>
+                    <div>
+                        <h4>Quality Control</h4>
+                        <p>Procedures and systems in place to ensure high product Quality.</p>
+                    </div>
+                </div>
+                <div class="boxs">
+                    <div>
+                        <i class="fa-solid fa-shield-halved"></i>
+                        <i class="fa-solid fa-location-arrow"></i>
+                    </div>
+                    <div>
+                        <h4>Technology and Innovation</h4>
+                        <p>Details on the latest manufacturing technologies and ongoing innovations.</p>
+                    </div>
+                </div>
+                <div class="boxs">
+                    <div>
+                        <i class="fa-solid fa-cube"></i>
+                        <i class="fa-solid fa-location-arrow"></i>
+                    </div>
+                    <div>
+                        <h4>Packaging and Logistics</h4>
+                        <p>Packaging and logistics for shipping to customers and distributors.</p>
+                    </div>
+                </div>
+                <div class="boxs">
+                    <div>
+                        <i class="fa-solid fa-chart-line"></i>
+                        <i class="fa-solid fa-location-arrow"></i>
+                    </div>
+                    <div>
+                        <h4>Consulting Market Reseach</h4>
+                        <p>Services to help compaines understand market needs and provide strategic advice.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section2">
+            <div>
+                <h2>Empowering Top Companies with Seamless Integrations</h2>
+                <p>Experience seamless connections with our innovative solutions, designed to effortlessly integrate eith your exising systems, enhance productivity, and drive your business towards greater success.</p>
+                <div><button>Work With Us</button></div>
+            </div>
+            <div><img style="border-radius: 10px;" src="assets/IMG/sece5.jpg" alt=""></div>
+        </section>
+        <section class="section3">
+            <h2>From Idea to Production in Days</h2>
+            <p>Accelerate your production with our technology. Reduce downtime and opptimize costs. Get a spaecial offer now!</p>
+            <div><button>Work With Us</button></div>
+        </section>
     </main>
     <footer>
+        <div>
+            <div>
+                <span class="logo">
+                    <div style="font-size: large;"><i class="fa-solid fa-p"></i></div>
+                    <div>rodmast</div>
+                </span>
+                <p>Our solutions make production faster and cheaper. Contact us for more information.</p>
+            </div>
+            <div>
+                <h4>Company</h4>
+                <div>
+                    <p>About Us</p>
+                    <p>Customers</p>
+                    <p>Newsroom</p>
+                    <p>Events</p>
+                </div>
+            </div>
+            <div>
+                <h4>Industries</h4>
+                <div>
+                    <p>Precision Metalforming</p>
+                    <p>Industrial Manufacturing</p>
+                    <p>High Tect & electronics</p>
+                    <p>Aerospace</p>
+                </div>
+            </div>
+            <div>
+                <h4>Products</h4>
+                <div>
+                    <p>Manufacturing Execution System</p>
+                    <p>Enterpise Resource Planning</p>
+                    <p>Quality Management System</p>
+                    <p>Supply Chain Planning</p>
+                </div>
+            </div>
+            <div>
+                <h4>Ger In Touch</h4>
+                <div>
+                    <p>hallow@prodmasr.com</p>
+                    <div>
+                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div>
+            <p>&copy; 2024 Prodmast, All rights reserved</p>
+            <div>
+                <p>Terms & Condition</p>
+                <p>Privacy Policy</p>
+            </div>
+        </div>
 
     </footer>
 
