--- a/Portfolio/indix.html
+++ b/Portfolio/indix.html
@@ -246,6 +246,9 @@
             <a href="https://github.com/Aysha-Kassem"><i class="fab fa-github"></i></a>
         </div>
     </footer>
+
+
+    <button id="up" style="position: fixed; bottom: 5%; right: 5%;"><i class="fa-solid fa-arrow-up"></i></button>
     <script src="assets/JavaScript/Script.js"></script>
 </body>
 
